# Photonic-Flash-Attention

./: AUTONOMOUS_SDLC_SUMMARY.md  CHANGELOG.md  CI_PIPELINE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  autonomous_sdlc_executor.py  code_quality_check.py  docker-compose.yml  global_deployment_orchestrator.py  performance_benchmark.py  pyproject.toml  quality_gate_results.json  quality_gates.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  research_components.py  run_quality_gates.py  security_scan.py  setup.py  test_basic_functionality.py  test_basic_integration.py  test_implementation.py  test_minimal.py  test_minimal_functionality.py  test_validation_only.py
.github/workflows/: ci.yml
autonomous_research_output/: autonomous_sdlc_execution_1755803310.json  autonomous_sdlc_execution_1756219724.json  autonomous_sdlc_execution_1756339914.json
benchmarks/: basic_benchmark.py
deploy/docker/: Dockerfile
deploy/kubernetes/: deployment.yaml
deploy/scripts/: deploy.sh
deploy/terraform/: main.tf  variables.tf
deployment/: production_deploy.py  setup-ci.md
deployment/compliance/: audit_config.json  ccpa_config.json  encryption_config.json  gdpr_config.json  pdpa_config.json
deployment/config/: production.json
deployment/docker/: Dockerfile.production
deployment/kubernetes/: production-deployment.yaml  production.yaml
deployment/monitoring/: global_dashboard.json
deployment/networking/: cdn.json  dns.json  load_balancer.json
deployment/production/: Dockerfile.prod  docker-compose.prod.yml  healthcheck.py
deployment/reports/: global_deployment_1755921099.json  global_deployment_1756219790.json  global_deployment_1756339931.json
deployment/requirements/: production.txt
deployment/scripts/: entrypoint.sh
docs/: conf.py  index.rst  quickstart.rst
docs/research/: PHOTONIC_FLASH_ATTENTION_PAPER.md
examples/: basic_usage.py  transformer_integration.py
kubernetes/: deployment.yaml
monitoring/: dashboard.py  prometheus.yml
scripts/: deploy.sh
src/photonic_flash_attention/: __init__.py  cli.py  (+1 more)
tests/: __init__.py  conftest.py  test_error_recovery.py  test_mock_integration.py  test_photonic_attention.py
(+63 files in other folders)
