[build-system]
requires = ["setuptools>=65", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "photonic-flash-attention"
version = "0.1.0"
description = "Hybrid photonic-electronic Flash-Attention implementation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Daniel Schmidt", email = "daniel@terragonlabs.ai"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0,<2.0.0",
    "psutil>=5.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "pre-commit>=2.17.0",
]
benchmark = [
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "wandb>=0.13.0",
    "tensorboard>=2.10.0",
]
hardware = [
    "pynvml>=11.4.0",
    "py3nvml>=0.2.7",
]
simulation = [
    "cupy-cuda12x>=12.0.0",
    "numba>=0.56.0",
]

[project.scripts]
photonic-benchmark = "photonic_flash_attention.cli:benchmark"
photonic-calibrate = "photonic_flash_attention.cli:calibrate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"